--- a/hyprland.conf.d/env-theme.conf
+++ b/hyprland.conf.d/env-theme.conf
@@ -1,3 +1,4 @@
 env = QT_QPA_PLATFORMTHEME, qt5ct
 env = XCURSOR_SIZE, 32
 env = GTK_THEME, catppuccin-mocha-pink-standard+default-dark
+env = QT_STYLE_OVERRIDE, kvantum-dark
