:sparkles: Multiple changes
Add another monitor for the wallpaper
Remove redundant qt5ct stuff
Add additional programs to README instructions
Move cursor theme to different file
Change EDITOR

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -43,6 +43,20 @@ image {
 	zindex = -10
 }
 
+image {
+	monitor = eDP-1
+	path = $HOME/.wallpapers/3-adjusted.png
+	blur_passes = 2
+	blur_size = 7
+	rounding = 0
+	border_size = 0
+	halign = left
+	valign = top
+	position = 0, 0
+	size = 1080
+	zindex = -10
+}
+
 label {
 	# user name
 	monitor = $monitor
