--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -11,6 +11,13 @@ general {
 	col.nogroup_border_active = $pink
 }
 
+# Set cursor theme
+exec = hyprctl setcursor Catppuccin-Mocha-Pink-Cursors 32
+
+env = XCURSOR_SIZE, 32
+env = GTK_THEME, catppuccin-mocha-pink-standard+default-dark
+env = QT_STYLE_OVERRIDE, kvantum-dark
+
 workspace=w[tv1], gapsout:8 # set outer gaps on workspaces with only 1 tiled window
 
 decoration {
