--- a/hyprland.conf.d/env.conf
+++ b/hyprland.conf.d/env.conf
@@ -5,7 +5,7 @@ env = SDL_VIDEODRIVER, wayland
 env = MOZ_ENABLE_WAYLAND, 1
 env = _JAVA_AWT_WM_NONREPARENTING, 1
 env = BROWSER, librewolf
-env = EDITOR, vim
+env = EDITOR, nvim
 env = LANG, en_AU.UTF-8
 env = LC_ALL, en_AU.UTF-8
 env = MPD_HOST, $XDG_RUNTIME_DIR/mpd/socket
