--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,7 @@
   - ~/.config/rofi/
   - ~/.config/gtk-2.0/
   - ~/.config/gtk-3.0/
+  - ~/.config/gtk-4.0/
   - ~/.icons/
   - ~/.icons/default/
   - ~/.local/
@@ -76,3 +77,6 @@
       force: true
     ~/.config/gtk-3.0/settings.ini: config/gtksettings.ini
     ~/.icons/default/index.theme: config/icons.theme
+    ~/.config/gtk-4.0/assets: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/assets
+    ~/.config/gtk-4.0/gtk.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/gtk.css
+    ~/.config/gtk-4.0/gtk-dark.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/gtk-dark.css
