:lipstick: Remove hyprlock pfp border

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -97,6 +97,7 @@ image {
 	# user pfp
 	monitor = $monitor
 	path = $HOME/.face
+	border_size = 0
 	size = 100
 	rounding = -1
     position = 0, 150
