--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -12,10 +12,12 @@ general {
 }
 
 # Set cursor theme
-exec = hyprctl setcursor Catppuccin-Mocha-Pink-Cursors 32
-
+env = HYPRCURSOR_THEME, catppuccin-mocha-pink
+env = HYPRCURSOR_SIZE, 32
 env = XCURSOR_SIZE, 32
-env = GTK_THEME, catppuccin-mocha-pink-standard+default-dark
+
+# Theme
+env = GTK_THEME, Colloid-Pink-Dark-Catppuccin
 env = QT_STYLE_OVERRIDE, kvantum-dark
 
 workspace=w[tv1], gapsout:8 # set outer gaps on workspaces with only 1 tiled window
