--- a/config.yaml
+++ b/config.yaml
@@ -25,6 +25,7 @@
   - ~/.local/share/
   - ~/.local/share/rofi/
   - ~/.local/share/rofi/themes/
+  - ~/.config/cava/
   - ~/.bin/
 
 - link:
@@ -80,3 +81,4 @@
     ~/.config/gtk-4.0/assets: /usr/share/themes/Colloid-Pink-Dark-Catppuccin/gtk-4.0/assets
     ~/.config/gtk-4.0/gtk.css: /usr/share/themes/Colloid-Pink-Dark-Catppuccin/gtk-4.0/gtk.css
     ~/.config/gtk-4.0/gtk-dark.css: /usr/share/themes/Colloid-Pink-Dark-Catppuccin/gtk-4.0/gtk-dark.css
+    ~/.config/cava/config: config/cava.conf
