:bug: Switch to rofi-wayland

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -2,12 +2,8 @@
 windowrule = float, ^(foto)$
 windowrule = pin, ^(foto)$
 
-# Force focus rofi
-windowrulev2 = float, class:^(Rofi)$
-windowrulev2 = noborder, class:^(Rofi)$
-windowrulev2 = pin, class:^(Rofi)$
-windowrulev2 = stayfocused, class:^(Rofi)$
-windowrulev2 = dimaround, class:^(Rofi)$
+# Dim everything around Rofi
+layerrule = dimaround, rofi
 
 # Other stuff that needs a floating window
 windowrule = float, ^(ghidra-Ghidra)$
