:fire: Remove username text in hyprlock

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -57,17 +57,17 @@ image {
 	zindex = -10
 }
 
-label {
-	# user name
-	monitor = $monitor
-	text_align = center
-	text = $DESC
-	color = $subtext0
-	position = 0, 50
-	halign = center
-	valign = center
-	font_size = 25
-}
+# label {
+# 	# user name
+# 	monitor = $monitor
+# 	text_align = center
+# 	text = $DESC
+# 	color = $subtext0
+# 	position = 0, 50
+# 	halign = center
+# 	valign = center
+# 	font_size = 25
+# }
 
 label {
 	# date
