:sparkles: Change browser

--- a/hyprland.conf.d/env.conf
+++ b/hyprland.conf.d/env.conf
@@ -4,7 +4,7 @@ env = MOZ_DBUS_REMOTE, 1
 env = SDL_VIDEODRIVER, wayland
 env = MOZ_ENABLE_WAYLAND, 1
 env = _JAVA_AWT_WM_NONREPARENTING, 1
-env = BROWSER, librewolf
+env = BROWSER, firefox
 env = EDITOR, nvim
 env = LANG, en_AU.UTF-8
 env = LC_ALL, en_AU.UTF-8
