:recycle: Migrate to hypridle

--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -13,7 +13,7 @@ exec-once = if ! pgrep -x -u "$(id -u)" dinit; then sleep 3; dinit; fi
 exec = pidof -sq dunst || dunst
 
 # Enable automatic screen-lock
-exec-once = $HOME/.bin/toggle-autolock on
+exec-once = hypridle
 
 # KDE Connect
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
