--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,6 @@
 - create:
   - ~/.config/
   - ~/.config/Kvantum
-  - ~/.config/swaylock/
   - ~/.config/kitty/
   - ~/.config/hypr/
   - ~/.config/hypr/themes/
@@ -31,13 +30,11 @@
 - link:
     ~/.config/Kvantum/catppuccin-mocha-pink: submodules/catppuccin-kvantum/themes/catppuccin-mocha-pink
     ~/.config/Kvantum/kvantum.kvconfig: config/kvantum.kvconfig
-    ~/.config/swaylock/config: config/swaylock.conf
     ~/.config/kitty/kitty.conf: config/kitty.conf
     ~/.config/dunst/dunstrc: config/dunstrc
     ~/.bin/start-keepassxc: scripts/start-keepassxc
     ~/.bin/power: scripts/power
     ~/.bin/lock: scripts/lock
-    ~/.bin/toggle-autolock: scripts/toggle-autolock
     ~/.bin/keybinds: keybinds
     ~/.bin/rewallpaper: scripts/rewallpaper
     ~/.bin/convert-wallpaper: scripts/convert-wallpaper
@@ -57,6 +54,7 @@
     ~/.config/hypr/themes/mocha.conf: submodules/catppuccin-hyprland/themes/mocha.conf
     ~/.config/hypr/hyprland.conf: hyprland.conf
     ~/.config/hypr/hyprlock.conf: config/hyprlock.conf
+    ~/.config/hypr/hypridle.conf: config/hypridle.conf
     ~/.config/hypr/hyprpaper.conf: config/hyprpaper.conf
     ~/.config/hypr/conf: hyprland.conf.d
     ~/.config/waybar/config.jsonc: config/waybar/config.jsonc
