--- a/hyprland.conf.d/env-nvidia.conf
+++ b/hyprland.conf.d/env-nvidia.conf
@@ -2,3 +2,6 @@ env = LIBVA_DRIVER_NAME, nvidia
 env = VDPAU_DRIVER, nvidia
 env = __GLX_VENDOR_LIBRARY_NAME, nvidia
 env = WLR_NO_HARDWARE_CURSORS, 1
+cursor {
+	no_hardware_cursors = true
+}
