--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -6,8 +6,8 @@ general {
 
 	border_size = 2
 	col.active_border = $pink
-	col.inactive_border = rgba(00000000)
-	col.nogroup_border = rgba(00000000)
+	col.inactive_border = rgba(00000040)
+	col.nogroup_border = rgba(00000040)
 	col.nogroup_border_active = $pink
 }
 
@@ -32,13 +32,15 @@ decoration {
 		new_optimizations = true
 	}
 
-	drop_shadow = true
-	shadow_range = 20
-	shadow_render_power = 2
-	shadow_ignore_window = true
-	col.shadow = rgba(00000040)
-	shadow_offset = 5 5
-	shadow_scale = 1.0
+	shadow {
+		enabled = true
+		range = 25
+		render_power = 1
+		ignore_window = true
+		color = rgba(00000030)
+		offset = 0 0
+		scale = 1.0
+	}
 }
 
 animations {
