--- a/config.yaml
+++ b/config.yaml
@@ -1,82 +1,131 @@
 - shell:
-  - [git submodule update --init --recursive, Installing submodules]
+    - - git submodule update --init --recursive
+      - Installing submodules
 
 - defaults:
     link:
-      relink: true
+      relink: yes
 
 - create:
-  - ~/.config/
-  - ~/.config/Kvantum
-  - ~/.config/kitty/
-  - ~/.config/hypr/
-  - ~/.config/hypr/themes/
-  - ~/.config/dunst/
-  - ~/.config/waybar/
-  - ~/.config/fontconfig/
-  - ~/.config/rofi/
-  - ~/.config/gtk-2.0/
-  - ~/.config/gtk-3.0/
-  - ~/.config/gtk-4.0/
-  - ~/.icons/
-  - ~/.icons/default/
-  - ~/.local/
-  - ~/.local/share/
-  - ~/.local/share/rofi/
-  - ~/.local/share/rofi/themes/
-  - ~/.config/cava/
-  - ~/.bin/
+    - ~/.config/
+    - ~/.config/Kvantum
+    - ~/.config/kitty/
+    - ~/.config/hypr/
+    - ~/.config/hypr/themes/
+    - ~/.config/dunst/
+    - ~/.config/waybar/
+    - ~/.config/fontconfig/
+    - ~/.config/rofi/
+    - ~/.config/gtk-2.0/
+    - ~/.config/gtk-3.0/
+    - ~/.config/gtk-4.0/
+    - ~/.icons/
+    - ~/.icons/default/
+    - ~/.local/
+    - ~/.local/share/
+    - ~/.local/share/rofi/
+    - ~/.local/share/rofi/themes/
+    - ~/.config/cava/
+    - ~/.bin/
 
 - link:
-    ~/.config/Kvantum/catppuccin-mocha-pink: submodules/catppuccin-kvantum/themes/catppuccin-mocha-pink
-    ~/.config/Kvantum/kvantum.kvconfig: config/kvantum.kvconfig
-    ~/.config/kitty/kitty.conf: config/kitty.conf
-    ~/.config/dunst/dunstrc: config/dunstrc
-    ~/.bin/start-keepassxc: scripts/start-keepassxc
-    ~/.bin/power: scripts/power
-    ~/.bin/keybinds: keybinds
-    ~/.bin/rewallpaper: scripts/rewallpaper
+
     ~/.bin/convert-wallpaper: scripts/convert-wallpaper
-    ~/.bin/update-gtk: scripts/update-gtk
-    ~/.bin/hyprstart: scripts/hyprstart
-    ~/.bin/kill-window: scripts/kill-window
-    ~/.bin/screenshot: submodules/screenshot.sh/screenshot.sh
-    ~/.bin/screenshot-preview: scripts/screenshot-preview
-    ~/.bin/screenshot-ocr: scripts/screenshot-ocr
-    ~/.bin/screenshot-qr: scripts/screenshot-qr
-    ~/.bin/rewaybar: scripts/rewaybar
+
     ~/.bin/emoji: submodules/emojipicker/emoji
+
     ~/.bin/emojiclip: submodules/emojipicker/emojiclip
-    ~/.config/hypr/themes/latte.conf: submodules/catppuccin-hyprland/themes/latte.conf
-    ~/.config/hypr/themes/frappe.conf: submodules/catppuccin-hyprland/themes/frappe.conf
-    ~/.config/hypr/themes/macchiato.conf: submodules/catppuccin-hyprland/themes/macchiato.conf
-    ~/.config/hypr/themes/mocha.conf: submodules/catppuccin-hyprland/themes/mocha.conf
-    ~/.config/hypr/hyprland.conf: hyprland.conf
-    ~/.config/hypr/hyprlock.conf: config/hyprlock.conf
-    ~/.config/hypr/hypridle.conf: config/hypridle.conf
-    ~/.config/hypr/hyprpaper.conf: config/hyprpaper.conf
-    ~/.config/hypr/conf: hyprland.conf.d
-    ~/.config/waybar/config.jsonc: config/waybar/config.jsonc
-    ~/.config/waybar/style.css: config/waybar/style.css
-    ~/.config/fontconfig/fonts.conf: config/fonts.conf
-    ~/.config/rofi/config.rasi: config/rofi.rasi
-    ~/.local/share/rofi/themes/catppuccin-latte.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-latte.rasi
-    ~/.local/share/rofi/themes/catppuccin-frappe.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-frappe.rasi
-    ~/.local/share/rofi/themes/catppuccin-macchiato.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-macchiato.rasi
-    ~/.local/share/rofi/themes/catppuccin-mocha.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-mocha.rasi
-    ~/.config/gtk-2.0/gtkfilechooser.ini:
-      path: config/gtkfilechooser.ini
-      force: true
-    ~/.config/gtk-2.0/gtkrc: config/gtkrc
-    ~/.config/gtk-3.0/gtkfilechooser.ini:
-      path: config/gtkfilechooser.ini
-      force: true
-    ~/.config/gtk-3.0/settings.ini: config/gtksettings.ini
-    ~/.icons/default/index.theme: config/icons.theme
-    ~/.config/gtk-3.0/assets: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-3.0/assets
-    ~/.config/gtk-3.0/gtk.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-3.0/gtk.css
-    ~/.config/gtk-3.0/gtk-dark.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-3.0/gtk-dark.css
-    ~/.config/gtk-4.0/assets: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/assets
-    ~/.config/gtk-4.0/gtk.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/gtk.css
-    ~/.config/gtk-4.0/gtk-dark.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/gtk-dark.css
+
+    ~/.bin/hyprstart: scripts/hyprstart
+
+    ~/.bin/keybinds: keybinds
+
+    ~/.bin/kill-window: scripts/kill-window
+
+    ~/.bin/power: scripts/power
+
+    ~/.bin/rewallpaper: scripts/rewallpaper
+
+    ~/.bin/rewaybar: scripts/rewaybar
+
+    ~/.bin/screenshot: submodules/screenshot.sh/screenshot.sh
+
+    ~/.bin/screenshot-ocr: scripts/screenshot-ocr
+
+    ~/.bin/screenshot-preview: scripts/screenshot-preview
+
+    ~/.bin/screenshot-qr: scripts/screenshot-qr
+
+    ~/.bin/start-keepassxc: scripts/start-keepassxc
+
+    ~/.bin/update-gtk: scripts/update-gtk
+
+    ~/.config/Kvantum/catppuccin-mocha-pink: submodules/catppuccin-kvantum/themes/catppuccin-mocha-pink
+
+    ~/.config/Kvantum/kvantum.kvconfig: config/kvantum.kvconfig
+
     ~/.config/cava/config: config/cava.conf
+
+    ~/.config/dunst/dunstrc: config/dunstrc
+
+    ~/.config/fontconfig/fonts.conf: config/fonts.conf
+
+    ~/.config/gtk-2.0/gtkfilechooser.ini:
+      force: yes
+      path: config/gtkfilechooser.ini
+
+    ~/.config/gtk-2.0/gtkrc: config/gtkrc
+
+    ~/.config/gtk-3.0/assets: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-3.0/assets
+
+    ~/.config/gtk-3.0/gtk-dark.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-3.0/gtk-dark.css
+
+    ~/.config/gtk-3.0/gtk.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-3.0/gtk.css
+
+    ~/.config/gtk-3.0/gtkfilechooser.ini:
+      force: yes
+      path: config/gtkfilechooser.ini
+
+    ~/.config/gtk-3.0/settings.ini: config/gtksettings.ini
+
+    ~/.config/gtk-4.0/assets: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/assets
+
+    ~/.config/gtk-4.0/gtk-dark.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/gtk-dark.css
+
+    ~/.config/gtk-4.0/gtk.css: /usr/share/themes/catppuccin-mocha-pink-standard+default/gtk-4.0/gtk.css
+
+    ~/.config/hypr/conf: hyprland.conf.d
+
+    ~/.config/hypr/hypridle.conf: config/hypridle.conf
+
+    ~/.config/hypr/hyprland.conf: hyprland.conf
+
+    ~/.config/hypr/hyprlock.conf: config/hyprlock.conf
+
+    ~/.config/hypr/hyprpaper.conf: config/hyprpaper.conf
+
+    ~/.config/hypr/themes/frappe.conf: submodules/catppuccin-hyprland/themes/frappe.conf
+
+    ~/.config/hypr/themes/latte.conf: submodules/catppuccin-hyprland/themes/latte.conf
+
+    ~/.config/hypr/themes/macchiato.conf: submodules/catppuccin-hyprland/themes/macchiato.conf
+
+    ~/.config/hypr/themes/mocha.conf: submodules/catppuccin-hyprland/themes/mocha.conf
+
+    ~/.config/kitty/kitty.conf: config/kitty.conf
+
+    ~/.config/rofi/config.rasi: config/rofi.rasi
+
+    ~/.config/waybar/config.jsonc: config/waybar/config.jsonc
+
+    ~/.config/waybar/style.css: config/waybar/style.css
+
+    ~/.icons/default/index.theme: config/icons.theme
+
+    ~/.local/share/rofi/themes/catppuccin-frappe.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-frappe.rasi
+
+    ~/.local/share/rofi/themes/catppuccin-latte.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-latte.rasi
+
+    ~/.local/share/rofi/themes/catppuccin-macchiato.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-macchiato.rasi
+
+    ~/.local/share/rofi/themes/catppuccin-mocha.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-mocha.rasi
