:wrench: Add a third monitor
This purchase might've been a mistake lmao

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -11,50 +11,21 @@ general {
 }
 
 background {
-	color = $base
-	zindex = -100
-}
-
-image {
 	monitor = HDMI-A-1
-	path = $HOME/.wallpapers/1-adjusted.png # must be same size as monitor, see scripts/convert-wallpaper
-	blur_passes = 2
-	blur_size = 7
-	rounding = 0
-	border_size = 0
-	halign = left
-	valign = top
-	position = 0, 0
-	size = 1080 # adjust to the lower value of your monitor resolution
-	zindex = -10
+	color = $base # fallback
+	path = $HOME/.wallpapers/1-adjusted.png
 }
 
-image {
+background {
 	monitor = DP-2
+	color = $base # fallback
 	path = $HOME/.wallpapers/2-adjusted.png
-	blur_passes = 2
-	blur_size = 7
-	rounding = 0
-	border_size = 0
-	halign = left
-	valign = top
-	position = 0, 0
-	size = 1080
-	zindex = -10
 }
 
-image {
-	monitor = eDP-1
+background {
+	monitor = DP-1
+	color = $base # fallback
 	path = $HOME/.wallpapers/3-adjusted.png
-	blur_passes = 2
-	blur_size = 7
-	rounding = 0
-	border_size = 0
-	halign = left
-	valign = top
-	position = 0, 0
-	size = 1080
-	zindex = -10
 }
 
 # label {
