--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -1,10 +1,10 @@
 # Monitors (change this)
 #monitor=HDMI-A-1,1920x1080@60,0x908,1
-monitor=HDMI-A-1,1920x1080@240,0x908,1
+monitor=HDMI-A-1,1920x1080@240,0x0,1
 #monitor=HDMI-A-1,1920x1080@60,0x908,1
 #monitor=DP-2,1920x1080@60,1920x980,1
-monitor=DP-2,1920x1080@60,1920x600,1,transform,3
-monitor=DP-1,1920x1080@60,3840x100,1
+monitor=DP-2,1920x1080@60,1920x-308,1,transform,3
+monitor=DP-1,1920x1080@180,-294x-1080,1
 monitor=HEADLESS-1,1920x1080@60,2700x2160,1
 
 #monitor=HDMI-A-1,1920x1080@60,0x908,1
@@ -16,12 +16,26 @@ monitor=DP-1,addreserved,0,0,0,0
 monitor=HEADLESS-1,addreserved,0,0,0,0
 
 # Workspaces (change this)
-workspace=12,monitor:DP-2 # E/=
-workspace=11,monitor:DP-2 # W/-
-workspace=10,monitor:DP-2,default:true # Q/0
-workspace=9,monitor:DP-2 # ^E
-workspace=8,monitor:DP-2 # ^W
-workspace=7,monitor:DP-2 # ^Q
+workspace=24,monitor:DP-1
+workspace=23,monitor:DP-1
+workspace=22,monitor:DP-1
+workspace=21,monitor:DP-1
+workspace=20,monitor:DP-1
+workspace=19,monitor:DP-1
+workspace=18,monitor:DP-1
+workspace=17,monitor:DP-1
+workspace=16,monitor:DP-1
+workspace=15,monitor:DP-1
+workspace=14,monitor:DP-1
+workspace=13,monitor:DP-1
+workspace=9,monitor:DP-1
+workspace=8,monitor:DP-1
+workspace=7,monitor:DP-1,default:true
+
+workspace=12,monitor:DP-2
+workspace=11,monitor:DP-2
+workspace=10,monitor:DP-2,default:true
+
 workspace=6,monitor:HDMI-A-1
 workspace=5,monitor:HDMI-A-1
 workspace=4,monitor:HDMI-A-1
