:sparkles: Add btop++ on startup

--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -52,3 +52,6 @@ exec-once = if ! pidof -sq jamesdsp; then sleep 1 && jamesdsp --tray; fi
 
 # Apply wallpaper
 exec-once = ~/.bin/rewallpaper
+
+# Btop
+exec-once = if ! pidof -sq btop; then btop; fi
