--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -2,6 +2,9 @@
 windowrule = float, ^(foto)$
 windowrule = pin, ^(foto)$
 
+# Btop
+windowrule = workspace 7 silent, ^(btop)$
+
 # Dim everything around Rofi
 layerrule = dimaround, rofi
 
