--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -60,11 +60,19 @@ animations {
 	animation = windows, 1, 8, overshoot-long, popin
 	animation = windowsMove, 1, 5, overshoot-long
 	animation = windowsOut, 1, 80, ease-out, popin
+
 	animation = border, 1, 8, default
-	animation = borderangle, 1, 8, default
 	animation = fade, 1, 8, default
 	animation = workspaces, 1, 5, overshoot, slidefade
+
+	animation = fadeLayers, 1, 3, ease-in-out
 }
+
+# Dim everything around Rofi
+layerrule = dimaround, ^(rofi)$
+
+# Slide-in animation for Rofi
+layerrule = animation slide, ^(rofi)$
 
 master {
 	mfact = 0.5
