:art: Use windowrulev2

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -1,22 +1,13 @@
 # Image viewer
-windowrule = float, ^(foto)$
-windowrule = pin, ^(foto)$
+windowrulev2 = float, class:^(foto)$
+windowrulev2 = pin, class:^(foto)$
 
 # Btop
-windowrule = workspace 7 silent, ^(btop)$
+windowrulev2 = workspace 7 silent, class:^(btop)$
 
 # Other stuff that needs a floating window
-windowrule = float, ^(ghidra-Ghidra)$
-windowrule = float, ^(Unity)$
-windowrule = float, ^(screenshare)$
-windowrule = float, title:^(LibreWolf — Sharing Indicator)$
-windowrule = float, title:^(KeePassXC -  Access Request)$
-windowrule = float, title:^sketch.*
-windowrule = float, steam_app_391540 # Undertale
-windowrule = float, ^(org\.kde\.polkit-kde-authentication-agent-1)$
-windowrule = tile, ^(ONLYOFFICE Desktop Editors)$
-windowrule = tile, presenter
-windowrule = float, title:^(UNDERTALE)$
+windowrulev2 = float, class:^(ghidra-Ghidra)$, class:^(Unity)$, class:^(screenshare)$, title:^(LibreWolf — Sharing Indicator)$, title:^(KeePassXC -  Access Request)$, title:^sketch.*, class:^(steam_app_391540)$, title:^(UNDERTALE)$, class:^(org\.kde\.polkit-kde-authentication-agent-1)$
+windowrulev2 = tile, class:^(ONLYOFFICE Desktop Editors)$, class:^(presenter)$
 
 # xwaylandvideobridge - https://wiki.hyprland.org/Useful-Utilities/Screen-Sharing/#xwayland
 windowrulev2 = opacity 0.0 override 0.0 override, class:^(xwaylandvideobridge)$
