--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -15,3 +15,6 @@ windowrulev2 = noanim, class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+
+# Prevent sites from detecting out of screen on Firefox
+windowrulev2 = renderunfocused, class:^(firefox)$
