--- a/hyprland.conf
+++ b/hyprland.conf
@@ -9,4 +9,5 @@ source=conf/misc.conf
 source=conf/window-rules.conf
 source=conf/binds.conf
 source=conf/lock.conf
+source=hyprland-custom.conf
 exec-once = hyprctl dispatch workspace 1
