:bug: Fix bug with btop starting

--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -3,9 +3,6 @@
 # Touchscreen keyboard (hidden by default)
 exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 585b70 --press 313244 --press-sp 313244 --swipe 313244 --swipe-sp 313244 --text cdd6f4 --text-sp f5c2e7 --landscape-layers simple,special -H 300 -L 200
 
-# Btop resource monitor
-#exec-once = kitty --class "btop" btop
-
 # User service manager
 exec-once = if ! pgrep -x -u "$(id -u)" dinit; then sleep 3; dinit; fi
 
@@ -53,5 +50,5 @@ exec-once = if ! pidof -sq jamesdsp; then sleep 1 && jamesdsp --tray; fi
 # Apply wallpaper
 exec-once = ~/.bin/rewallpaper
 
-# Btop
-exec-once = if ! pidof -sq btop; then btop; fi
+# Btop resource monitor
+exec-once = kitty --class "btop" btop
