:bug: Update cursor name

--- a/config/gtksettings.ini
+++ b/config/gtksettings.ini
@@ -2,7 +2,7 @@
 gtk-theme-name=catppuccin-mocha-pink-standard+default
 gtk-icon-theme-name=Papirus-Dark
 gtk-font-name=Ubuntu 12
-gtk-cursor-theme-name=catppuccin-mocha-pink
+gtk-cursor-theme-name=Catppuccin Mocha Pink
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
