:wrench: Add monitor for laptop

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -28,6 +28,12 @@ background {
 	path = $HOME/.wallpapers/3-adjusted.png
 }
 
+background {
+	monitor = eDP-1
+	color = $base # fallback
+	path = $HOME/.wallpapers/4-adjusted.png
+}
+
 # label {
 # 	# user name
 # 	monitor = $monitor
