--- a/config/hyprpaper.conf
+++ b/config/hyprpaper.conf
@@ -5,6 +5,7 @@ preload = ~/.wallpapers/3-adjusted.png
 wallpaper = HDMI-A-1, ~/.wallpapers/1-adjusted.png
 wallpaper = DP-2, ~/.wallpapers/2-adjusted.png
 wallpaper = DP-1, ~/.wallpapers/3-adjusted.png
+wallpaper = eDP-1, ~/.wallpapers/4-adjusted.png
 
 splash = false
 ipc = off
