--- a/hyprland.conf.d/monitors.conf
+++ b/hyprland.conf.d/monitors.conf
@@ -5,6 +5,7 @@ monitor=HDMI-A-1,1920x1080@240,0x0,1
 #monitor=DP-2,1920x1080@60,1920x980,1
 monitor=DP-2,1920x1080@60,1920x-308,1,transform,3
 monitor=DP-1,1920x1080@180,-294x-1080,1
+monitor=eDP-1,1920x1080@60,0x1080,1.5
 monitor=HEADLESS-1,1920x1080@60,2700x2160,1
 
 #monitor=HDMI-A-1,1920x1080@60,0x908,1
@@ -13,6 +14,7 @@ monitor=HEADLESS-1,1920x1080@60,2700x2160,1
 monitor=HDMI-A-1,addreserved,0,0,0,0
 monitor=DP-2,addreserved,0,0,0,0
 monitor=DP-1,addreserved,0,0,0,0
+monitor=eDP-1,addreserved,0,0,0,0
 monitor=HEADLESS-1,addreserved,0,0,0,0
 
 # Workspaces (change this)
