--- a/config/hyprpaper.conf
+++ b/config/hyprpaper.conf
@@ -1,6 +1,7 @@
 preload = ~/.wallpapers/1-adjusted.png
 preload = ~/.wallpapers/2-adjusted.png
 preload = ~/.wallpapers/3-adjusted.png
+preload = ~/.wallpapers/4-adjusted.png
 
 wallpaper = HDMI-A-1, ~/.wallpapers/1-adjusted.png
 wallpaper = DP-2, ~/.wallpapers/2-adjusted.png
