--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -18,7 +18,7 @@ env = XCURSOR_SIZE, 32
 
 # Theme
 env = GTK_THEME, catppuccin-mocha-pink-standard+default
-env = QT_STYLE_OVERRIDE, kvantum-dark
+env = QT_QPA_PLATFORMTHEME, qt5ct
 
 workspace=w[tv1], gapsout:8 # set outer gaps on workspaces with only 1 tiled window
 
