✨ Re-enable input while typing on trackpad

--- a/hyprland.conf.d/input.conf
+++ b/hyprland.conf.d/input.conf
@@ -6,7 +6,7 @@ input {
 	float_switch_override_focus = true
 
 	touchpad {
-		disable_while_typing = true
+		disable_while_typing = false
 		natural_scroll = true
 		scroll_factor = 0.2
 	}
