--- a/config.yaml
+++ b/config.yaml
@@ -36,6 +36,9 @@
     ~/.bin/emojiclip: submodules/emojipicker/emojiclip
     ~/.bin/emojipicker/emojis: submodules/emojipicker/emojis
     ~/.bin/hyprstart: scripts/hyprstart
+    ~/.bin/lock: scripts/lock
+    ~/.bin/toggle-autolock: scripts/toggle-autolock
+    ~/.bin/hypr-search-proc.pl: scripts/hypr-search-proc.pl
     ~/.bin/keybinds: keybinds
     ~/.bin/kill-window: scripts/kill-window
     ~/.bin/power: scripts/power
