--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -1,5 +1,7 @@
 # Autostart
 
+$proc = ~/.bin/hypr-search-proc.pl -s -q --
+
 # Touchscreen keyboard (hidden by default)
 exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 585b70 --press 313244 --press-sp 313244 --swipe 313244 --swipe-sp 313244 --text cdd6f4 --text-sp f5c2e7 --landscape-layers simple,special -H 300 -L 200
 
@@ -7,10 +9,10 @@ exec-once = wvkbd-mobintl --hidden --fn Ubuntu --bg 1e1e2e --fg 45475a --fg-sp 5
 exec-once = if ! pgrep -x -u "$(id -u)" dinit; then sleep 3; dinit; fi
 
 # Start notification daemon
-exec = pidof -sq dunst || dunst
+exec = $proc dunst
 
 # Enable automatic screen-lock
-exec-once = hypridle
+exec-once = $proc hypridle
 
 # KDE Connect
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
@@ -33,19 +35,19 @@ exec-once = wl-paste --type image --watch cliphist store
 exec-once = $HOME/.bin/hyprstart
 
 # Special script to start keepassxc with ssh-agent environment variables
-exec-once = pidof -sq keepassxc || ~/.bin/start-keepassxc
+exec-once = ~/.bin/hypr-search-proc.pl -q keepassxc || ~/.bin/start-keepassxc
 
 # Volume/brightness control with a pop-up
-exec-once = swayosd-server
+exec = $proc swayosd-server
 
 # Waybar
-exec-once = if ! pidof -sq waybar; then sleep 1 && ~/.bin/rewaybar; fi
+exec = $proc waybar
 
 # Calender
-exec-once = if ! pidof -sq orage; then sleep 1 && orage; fi
+exec = $proc orage
 
 # Audio mixer
-exec-once = if ! pidof -sq jamesdsp; then sleep 1 && jamesdsp --tray; fi
+exec = $proc jamesdsp --tray
 
 # Apply wallpaper
 exec-once = ~/.bin/rewallpaper
