💄 Change colour of text on lockscreen
TODO: make this customisable more easily

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -51,7 +51,7 @@ label {
 	monitor = $monitor
 	text_align = center
 	text = cmd[update:1000] date "+%Y-%m-%d %A"
-	color = $subtext0
+	color = $base
 	position = 0, 350
 	halign = center
 	valign = center
@@ -63,7 +63,7 @@ label {
 	monitor = $monitor
 	text_align = center
 	text = cmd[update:1000] date "+%H:%M:%S"
-	color = $subtext0
+	color = $base
 	position = 0, 300
 	halign = center
 	valign = center
@@ -111,7 +111,6 @@ input-field {
 	bothlock_color = -1
 	invert_numlock = false
 	swap_font_color = false
-	font_size = 12
 }
 
 label {
@@ -119,7 +118,7 @@ label {
 	monitor = $monitor
 	text_align = center
 	text = $LAYOUT
-	color = $subtext0
+	color = $base
 	position = 0, -200
 	halign = center
 	valign = center
