--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,6 @@
 - shell:
     - - git submodule update --init --recursive
       - Installing submodules
-    - - touch ~/.config/hypr/hyprland-custom.conf
-      - Creating custom Hyprland configuration file
-    - - 'if ! test -e ~/.config/keepassxc/keepassxc.ini; then install -Dm644 config/keepassxc.ini ~/.config/keepassxc/keepassxc.ini; fi'
-      - Installing KeePassXC configuration file
 - defaults:
     link:
       relink: yes
@@ -90,3 +86,10 @@
     ~/.local/share/rofi/themes/catppuccin-latte.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-latte.rasi
     ~/.local/share/rofi/themes/catppuccin-macchiato.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-macchiato.rasi
     ~/.local/share/rofi/themes/catppuccin-mocha.rasi: submodules/catppuccin-rofi/basic/.local/share/rofi/themes/catppuccin-mocha.rasi
+- shell:
+    - - touch ~/.config/hypr/hyprland-custom.conf
+      - Creating custom Hyprland configuration file
+    - - 'if ! test -e ~/.config/keepassxc/keepassxc.ini; then install -Dm644 config/keepassxc.ini ~/.config/keepassxc/keepassxc.ini; fi'
+      - Installing KeePassXC configuration file
+    - - 'touch ~/.config/waybar/wttrbar-args'
+      - Creating wttrbar arguments file
