✨ Add support for KDE Connect presentation remote

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -18,3 +18,18 @@ windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
 # Prevent sites from detecting out of screen on Firefox
 windowrulev2 = renderunfocused, class:^(firefox)$
+
+# KDE Connect Presentation Pointer
+# https://www.reddit.com/r/hyprland/comments/1d0f2ou/_/
+windowrulev2=opacity 1, title:^(KDE Connect Daemon)$
+windowrulev2=noblur, title:^(KDE Connect Daemon)$
+windowrulev2=noborder, title:^(KDE Connect Daemon)$
+windowrulev2=noshadow, title:^(KDE Connect Daemon)$
+windowrulev2=noanim, title:^(KDE Connect Daemon)$
+windowrulev2=nofocus, title:^(KDE Connect Daemon)$
+windowrulev2=suppressevent fullscreen, title:^(KDE Connect Daemon)$
+windowrulev2=float, title:^(KDE Connect Daemon)$
+windowrulev2=pin, title:^(KDE Connect Daemon)$
+# Replace with main monitor resolution
+windowrulev2=minsize 1920 1080, title:^(KDE Connect Daemon)$
+# windowrulev2=move 0 0, title:^(KDE Connect Daemon)$
