✨ Add GIMP dialog to floating

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -19,6 +19,9 @@ windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 # Prevent sites from detecting out of screen on Firefox
 windowrulev2 = renderunfocused, class:^(firefox)$
 
+# GIMP dialogs
+windowrulev2=float, title:^(GIMP Text Editor)$
+
 # KDE Connect Presentation Pointer
 # https://www.reddit.com/r/hyprland/comments/1d0f2ou/_/
 windowrulev2=opacity 1, title:^(KDE Connect Daemon)$
