⏪️ Revert Change colour of text on lockscreen

--- a/config/hyprlock.conf
+++ b/config/hyprlock.conf
@@ -51,7 +51,7 @@ label {
 	monitor = $monitor
 	text_align = center
 	text = cmd[update:1000] date "+%Y-%m-%d %A"
-	color = $base
+	color = $subtext0
 	position = 0, 350
 	halign = center
 	valign = center
@@ -63,7 +63,7 @@ label {
 	monitor = $monitor
 	text_align = center
 	text = cmd[update:1000] date "+%H:%M:%S"
-	color = $base
+	color = $subtext0
 	position = 0, 300
 	halign = center
 	valign = center
@@ -105,7 +105,6 @@ input-field {
 	check_color = $blue
 	fail_color = $red
 	fail_text = <span>$FAIL ($ATTEMPTS)</span>
-	fail_transition = 300
 	capslock_color = $green
 	numlock_color = -1
 	bothlock_color = -1
@@ -118,7 +117,7 @@ label {
 	monitor = $monitor
 	text_align = center
 	text = $LAYOUT
-	color = $base
+	color = $subtext0
 	position = 0, -200
 	halign = center
 	valign = center
