🐛 Fix Minecraft bug

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -19,6 +19,9 @@ windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 # Prevent sites from detecting out of screen on Firefox
 windowrulev2 = renderunfocused, class:^(firefox)$
 
+# Prevent getting kicked for time-out when Minecraft is not rendered
+windowrulev2 = renderunfocused, class:^(com.mojang.minecraft.java-edition)$
+
 # GIMP dialogs
 windowrulev2=float, title:^(GIMP Text Editor)$
 
