🐛 Fix breaking changes in regards to renaming windowrulev2

--- a/hyprland.conf.d/window-rules.conf
+++ b/hyprland.conf.d/window-rules.conf
@@ -1,41 +1,41 @@
 # Image viewer
-windowrulev2 = float, class:^(foto)$
-windowrulev2 = pin, class:^(foto)$
+windowrule = float, class:^(foto)$
+windowrule = pin, class:^(foto)$
 
 # Btop
-windowrulev2 = workspace 7 silent, class:^(btop)$
+windowrule = workspace 7 silent, class:^(btop)$
 
 # Other stuff that needs a floating window
-windowrulev2 = float, class:^(ghidra-Ghidra)$, class:^(Unity)$, class:^(screenshare)$, title:^(LibreWolf — Sharing Indicator)$, title:^(KeePassXC -  Access Request)$, title:^sketch.*, class:^(steam_app_391540)$, title:^(UNDERTALE)$, class:^(org\.kde\.polkit-kde-authentication-agent-1)$
-windowrulev2 = tile, class:^(ONLYOFFICE Desktop Editors)$, class:^(presenter)$
+windowrule = float, class:^(ghidra-Ghidra)$, class:^(Unity)$, class:^(screenshare)$, title:^(LibreWolf — Sharing Indicator)$, title:^(KeePassXC -  Access Request)$, title:^sketch.*, class:^(steam_app_391540)$, title:^(UNDERTALE)$, class:^(org\.kde\.polkit-kde-authentication-agent-1)$
+windowrule = tile, class:^(ONLYOFFICE Desktop Editors)$, class:^(presenter)$
 
 # xwaylandvideobridge - https://wiki.hyprland.org/Useful-Utilities/Screen-Sharing/#xwayland
-windowrulev2 = opacity 0.0 override 0.0 override, class:^(xwaylandvideobridge)$
-windowrulev2 = noanim, class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+windowrule = opacity 0.0 override 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
 
 # Prevent sites from detecting out of screen on Firefox
-windowrulev2 = renderunfocused, class:^(firefox)$
+windowrule = renderunfocused, class:^(firefox)$
 
 # Prevent getting kicked for time-out when Minecraft is not rendered
-windowrulev2 = renderunfocused, class:^(com.mojang.minecraft.java-edition)$
+windowrule = renderunfocused, class:^(com.mojang.minecraft.java-edition)$
 
 # GIMP dialogs
-windowrulev2=float, title:^(GIMP Text Editor)$
+windowrule=float, title:^(GIMP Text Editor)$
 
 # KDE Connect Presentation Pointer
 # https://www.reddit.com/r/hyprland/comments/1d0f2ou/_/
-windowrulev2=opacity 1, title:^(KDE Connect Daemon)$
-windowrulev2=noblur, title:^(KDE Connect Daemon)$
-windowrulev2=noborder, title:^(KDE Connect Daemon)$
-windowrulev2=noshadow, title:^(KDE Connect Daemon)$
-windowrulev2=noanim, title:^(KDE Connect Daemon)$
-windowrulev2=nofocus, title:^(KDE Connect Daemon)$
-windowrulev2=suppressevent fullscreen, title:^(KDE Connect Daemon)$
-windowrulev2=float, title:^(KDE Connect Daemon)$
-windowrulev2=pin, title:^(KDE Connect Daemon)$
+windowrule=opacity 1, title:^(KDE Connect Daemon)$
+windowrule=noblur, title:^(KDE Connect Daemon)$
+windowrule=noborder, title:^(KDE Connect Daemon)$
+windowrule=noshadow, title:^(KDE Connect Daemon)$
+windowrule=noanim, title:^(KDE Connect Daemon)$
+windowrule=nofocus, title:^(KDE Connect Daemon)$
+windowrule=suppressevent fullscreen, title:^(KDE Connect Daemon)$
+windowrule=float, title:^(KDE Connect Daemon)$
+windowrule=pin, title:^(KDE Connect Daemon)$
 # Replace with main monitor resolution
-windowrulev2=minsize 1920 1080, title:^(KDE Connect Daemon)$
-# windowrulev2=move 0 0, title:^(KDE Connect Daemon)$
+windowrule=minsize 1920 1080, title:^(KDE Connect Daemon)$
+# windowrule=move 0 0, title:^(KDE Connect Daemon)$
