--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -7,7 +7,7 @@
 	// Choose the order of the modules
 	"modules-left": [ "hyprland/window", "hyprland/workspaces"  ],
 	"modules-center": [ ],
-	"modules-right": [ "custom/weather", "battery", "mpd", "pulseaudio", "clock", "tray" ],
+	"modules-right": [ "custom/weather", "battery", "custom/waybar-mpris", "pulseaudio", "clock", "tray" ],
 	//"output": [ "DP-2", "HDMI-A-1", "DP-1", "eDP-1" ],
 	// Modules configuration
 	// "sway/workspaces": {
@@ -35,22 +35,19 @@
 		"format-plugged": "{icon} {capacity}%",
 		"format-icons": [" ", " ", " ", " ", " "]
 	},
-	"mpd": {
-		"server": "/run/user/1000/mpd/socket",
-		"state-icons": { "playing": "▶️", "paused": "⏸️" },
-		"consume-icons": { "on": "✂️", "off": "" },
-		"random-icons": { "on": "🔀", "off": "" },
-		"repeat-icons": { "on": "🔁", "off": "" },
-		"single-icons": { "on": "1️⃣", "off": "" },
-		//"format": "{stateIcon}{consumeIcon}{randomIcon}{repeatIcon}{singleIcon} {title} - {elapsedTime:%M:%S} / {totalTime:%M:%S}",
-		"format": "{stateIcon}{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}",
-		"format-stopped": " stopped",
-		"format-disconnected": "disconnected",
-		"tooltip": true,
-		"tooltip-format": "{title}\nArtist: {artist}\nAlbum: {album}\n{elapsedTime} / {totalTime}\n\nVolume: {volume}%",
-		"on-click": "mpc toggle",
-		"on-click-right": "xfmpc",
-		"on-click-middle": "pavucontrol"
+	"custom/waybar-mpris": {
+		"return-type": "json",
+		"exec": "waybar-mpris --position --autofocus --order 'SYMBOL:ARTIST:TITLE:POSITION' --pause '▶️' --play '⏸️'",
+		"on-click": "waybar-mpris --send toggle",
+		// This option will switch between players on right click.
+		"on-click-right": "waybar-mpris --send player-next",
+		// The options below will switch the selected player on scroll
+		// "on-scroll-up": "waybar-mpris --send player-next",
+		// "on-scroll-down": "waybar-mpris --send player-prev",
+		// The options below will go to next/previous track on scroll
+		// "on-scroll-up": "waybar-mpris --send next",
+		// "on-scroll-down": "waybar-mpris --send prev",
+		"escape": true
 	},
 	"hyprland/window": {
 		"format": "{title}",
