🐛 Fix cursor names

--- a/hyprland.conf.d/appearance.conf
+++ b/hyprland.conf.d/appearance.conf
@@ -12,7 +12,7 @@ general {
 }
 
 # Set cursor theme
-env = HYPRCURSOR_THEME, Catppuccin Mocha Pink
+env = HYPRCURSOR_THEME, catppuccin-mocha-pink-cursors
 env = HYPRCURSOR_SIZE, 32
 env = XCURSOR_SIZE, 32
 
