--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -28,8 +28,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = $HOME/.bin/update-gtk
 
 # Clipboard history
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+exec-once = wl-paste --watch cliphist store
 
 # Start pipewire and xdg portal
 exec-once = $HOME/.bin/hyprstart
