--- a/hyprland.conf.d/autostart.conf
+++ b/hyprland.conf.d/autostart.conf
@@ -24,6 +24,9 @@ exec-once = udiskie -f nemo -t -n -A
 # D-Bus
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
+# hyprpolkitagent
+exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent
+
 # Apply GTK config
 exec-once = $HOME/.bin/update-gtk
 
